--- a/src/main.lfm
+++ b/src/main.lfm
@@ -1,22 +1,23 @@
 object frmMain: TfrmMain
-  Left = 314
+  Left = 305
   Height = 539
-  Top = 107
+  Top = 103
   Width = 819
-  Caption = 'frmMain'
+  Caption = 'Main'
   ClientHeight = 539
   ClientWidth = 819
   OnCreate = FormCreate
   OnShow = FormShow
+  Position = poDesktopCenter
   LCLVersion = '1.6.0.4'
   object pgMain: TPageControl
     Left = 0
     Height = 539
     Top = 0
     Width = 819
-    ActivePage = tbSettings
+    ActivePage = tbLogs
     Align = alClient
-    TabIndex = 1
+    TabIndex = 0
     TabOrder = 0
     object tbLogs: TTabSheet
       Caption = 'Logs'
@@ -291,7 +292,7 @@ object frmMain: TfrmMain
         Height = 338
         Top = 7
         Width = 220
-        Caption = 'Source COM Port:'
+        Caption = 'Target COM Port:'
         ClientHeight = 322
         ClientWidth = 218
         TabOrder = 1
@@ -547,6 +548,12 @@ object frmMain: TfrmMain
     Device = 'COM1'
     RcvLineCRLF = False
     left = 574
+    top = 25
+  end
+  object tmrStartUp: TTimer
+    Enabled = False
+    OnTimer = tmrStartUpTimer
+    left = 637
     top = 25
   end
 end
